# armordetect

./: CMakeLists.txt  myArmorDetect.cpp  myColorDetectForVideo.cpp  openCamera.cpp  test.cpp
include/: CRC_Check.h  armor_detect.h  serialport.h
src/: CRC_Check.cpp  armor_detect.cpp  serialport.cpp
